--- a/css/default.css
+++ b/css/default.css
@@ -34,6 +34,7 @@
     font-size: 100%;
     font-style: normal;
     font-weight: normal;
+    width: 100%;
 }
 .instruct {
     background-color: #f5f5f5;
